# alpha

./: .gitignore  .gitmodules  .scafrc  AUTHORS  INSTALL  LICENSE  Makefile.am  README  Tank.geom  alpha.m4.in  alpha.pc.in  b  blank.pro  compile  configure.ac  demo.pro  demos.pro  logo.pro  main.pro  spiral.pro  t
alpha-files/: INSTALL
alpha-files/src/: Alpha.h  Camera.h  DemoTabWidget.h  Logo.h  LuaGLDemo.cpp  LuaGLDemo.h  LuaGLWidget.cpp  MeasuredTimer.cpp  RandomStippleGLWidget.cpp  SpiralGLWidget.h  StarGLDemo.cpp
alpha-files/tests/: Vector3Tests.h
demos/: AnimatedGLWidget.cpp  AnimatedGLWidget.h  AnimatedGLWidget.hpp  BlankGLWidget.hpp  CubeGLWidget.cpp  CubeGLWidget.h  CubeGLWidget.hpp  DiamondGLDemo.cpp  DiamondGLDemo.hpp  DiamondGLWidget.cpp  DiamondGLWidget.hpp  FilmRollGLWidget.hpp  FontGLWidget.cpp  FontGLWidget.hpp  GLWidget.cpp  Heights.hpp  Logo.cpp  LogoGLWidget.cpp  LogoGLWidget.h  LogoGLWidget.hpp  LuaGLDemo.cpp  LuaGLDemo.hpp  LuaGLWidget.cpp  LuaGLWidget.h  LuaGLWidget.hpp  Makefile.am  PlanetsGLWidget.cpp  PlanetsGLWidget.h  PlanetsGLWidget.hpp  RandomStippleGLWidget.cpp  RandomStippleGLWidget.hpp  RotatableGLDemo.cpp  RotatableGLDemo.hpp  SpiralGLWidget.hpp  SpiralLinesGLWidget.hpp  StarGLDemo.cpp  StarGLDemo.h  StarGLWidget.cpp  StarGLWidget.hpp  StippleGLWidget.hpp  (+7 more)
doc/: brett.comments  frito.comments  requirements
doc/iterations/: 001-bootstrap-opengl
include/: Bootstrapper.hpp  InputMotion.hpp  Makefile.am  Object.hpp  PerlinNoise.hpp  SystemLoop.hpp  Vector3.hpp  math.hpp
include/gl/: Camera.hpp  DirectRenderLayer.hpp  GLOperation.hpp  PerspectiveProjection.hpp  Projection.hpp  RenderLayer.hpp  Screen.hpp  ScreenGLWidget.hpp  Viewport.hpp  VoxmapRenderLayer.hpp  util.hpp
include/input/: PlayerInputFilter.hpp
m4/: ax_have_opengl.m4  ax_have_qt.m4  lua-cxx.m4
src/: .gitignore  Alpha.cpp  Alpha.h  AnimatedGLWidget.cpp  AnimatedGLWidget.h  ArrayVoxmap.hpp  AtomGLWidget.cpp  AtomGLWidget.h  BlankGLDemo.h  BlankGLWidget.h  Bootstrapper.cpp  Bootstrapper.hpp  Box2.hpp  Camera.cpp  Camera.h  ConeGLDemo.cpp  ConeGLDemo.h  ConeGLWidget.cpp  ConeGLWidget.h  Cube.cpp  Cube.h  CubeGLWidget.cpp  CubeGLWidget.h  Cuboid.cpp  Cuboid.h  CylinderGLWidget.h  DiamondGLDemo.cpp  DiamondGLDemo.h  DiamondGLWidget.cpp  DiamondGLWidget.h  DirectRenderLayer.hpp  FilmRollGLWidget.h  FontGLWidget.cpp  FontGLWidget.h  GLDemo.cpp  GLDemo.h  GLOperation.cpp  GLOperation.hpp  GLWidget.cpp  GLWidget.h  (+68 more)
src/gl/: Camera.cpp  Camera.h  Cuboid.cpp  Cuboid.h  DirectRenderLayer.hpp  GLOperation.cpp  GLOperation.hpp  PerspectiveProjection.cpp  PerspectiveProjection.hpp  Physical.hpp  Projection.hpp  RenderLayer.hpp  Renderable.hpp  Screen.cpp  Screen.hpp  ScreenGLWidget.cpp  ScreenGLWidget.hpp  Viewport.cpp  Viewport.hpp  VoxmapRenderLayer.hpp  util.cpp  util.h  util.hpp
src/input/: PlayerInputFilter.cpp  PlayerInputFilter.hpp
tests/: Makefile.am  RenderLayerTests.h  RenderLayerTests.hpp  RotationTests.h  RotationTests.hpp  SortedLoopTests.hpp  SystemLoopTests.hpp  Vector3Tests.h  Vector3Tests.hpp  VectorTests.h  VoxmapTests.hpp  init.hpp  main.cpp  make_wrapper.sh  tests.pro
