nobase_pkginclude_HEADERS = \
	Alpha.h \
	ArrayVoxmap.hpp \
	Bootstrapper.hpp \
	Box2.hpp \
	gl/Camera.hpp \
	gl/Viewport.hpp \
	gl/PerspectiveProjection.hpp \
	gl/GLOperation.hpp \
	gl/VoxmapRenderLayer.hpp \
	gl/DirectRenderLayer.hpp \
	gl/ScreenGLWidget.hpp \
	gl/Projection.hpp \
	gl/RenderLayer.hpp \
	gl/Screen.hpp \
	gl/Cuboid.hpp \
	gl/util.hpp \
	input/PlayerInputFilter.hpp \
	InputMotion.hpp \
	math.hpp \
	MeasuredTimer.hpp \
	Object.hpp \
	PerlinNoise.hpp \
	Physical.hpp \
	Player.hpp \
	PlayerInput.h \
	SystemLoop.hpp \
	Vector3.hpp
